--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,6 +29,8 @@ nav{
    border-right: 2px solid #202738;
    padding: 30px 15px;
    font-family:Verdana, Geneva, Tahoma, sans-serif;
+   overflow-y: scroll;
+   scrollbar-width: none;
 }
 
 header{
